# obj2stl

./: CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  sample_bench2.cpp  stl.cpp
include/: calc.hpp  format.hpp  mesh.hpp  obj.hpp  stl.hpp  utils.hpp  voxel.hpp
src/: bytes_writer.cpp  calc.cpp  format.cpp  greet.cpp  main.cpp  mesh.cpp  mesh_layout_reader.cpp  obj.cpp  stl.cpp  triangulation.cpp  utils.cpp  voxel.cpp
tests/: CMakeLists.txt  bytes_writer.cpp  calc.cpp  format.cpp  mesh.cpp  mesh_layout_reader.cpp  obj.cpp  stl.cpp  triangulation.cpp  voxel.cpp
tests/resources/: box.stl  complex_generated.stl  generated.stl
